--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 body {
@@ -46,6 +46,10 @@ body {
 
 .home {
   height: 100vh;
+}
+
+tbody tr:nth-child(2n) {
+  background-color: #d3e1f8;
 }
 
 .about {
